// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessageContent > ARRAY > should write an array of content correctly 1`] = `
"ArrayChatMessageContent(
    value=[
        StringChatMessageContent(value="First message"),
        FunctionCallChatMessageContent(
            value=FunctionCallChatMessageContentValue(
                name="get_weather",
                arguments={
                    "location": "Seattle",
                },
            )
        ),
    ]
)
"
`;

exports[`ChatMessageContent > AUDIO > should write an audio content correctly 1`] = `
"AudioChatMessageContent(
    src="https://example.com/audio.mp3",
    metadata={
        "key": "value",
    },
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content with id as null correctly 1`] = `
"FunctionCallChatMessageContent(
    value=FunctionCallChatMessageContentValue(
        name="get_weather",
        arguments={
            "location": "New York",
            "unit": "celsius",
        },
    )
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content with id correctly 1`] = `
"FunctionCallChatMessageContent(
    value=FunctionCallChatMessageContentValue(
        id="123",
        name="get_weather",
        arguments={
            "location": "New York",
            "unit": "celsius",
        },
    )
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content without id correctly 1`] = `
"FunctionCallChatMessageContent(
    value=FunctionCallChatMessageContentValue(
        name="get_weather",
        arguments={
            "location": "New York",
            "unit": "celsius",
        },
    )
)
"
`;

exports[`ChatMessageContent > IMAGE > should write an image content correctly 1`] = `
"ImageChatMessageContent(
    src="https://example.com/image.png",
    metadata={
        "key": "value",
    },
)
"
`;

exports[`ChatMessageContent > STRING > should write a string content correctly 1`] = `"StringChatMessageContent(value="Hello, AI!")"`;
